2005-08-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ucs.el: Enable XEmacs 21.5-Mule to compile it anyway.

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Improve regexp
	for the shopping group; remove the shopping.ryouhin group.
	(shimbun-asahi-prepare-article): Add a filter for the shopping group.

2005-08-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): Put the encoded anchor names
	instead of the itself.

2005-08-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Change the
	index page and the regexp for the shopping.kishi group.
	(shimbun-asahi-prepare-article): Change the regexp used to find
	the start of articles for the shopping.kishi group.

2005-08-07  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-heise.el (shimbun-heise-wash-telepolis-article):
	Remove ads.

2005-08-04  Andreas Seltenreich  <seltenreich@gmx.de>

	* shimbun/sb-zeit-de.el (shimbun-index-url): Fix typo.

2005-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* octet.el (octet-insert-buffer): Use insert-buffer-substring
	instead of insert-buffer.

	* w3m-bookmark.el (w3m-about-bookmark): Ditto.

	* w3m-proc.el (w3m-process-sentinel): Ditto.

	* shimbun/nnshimbun.el (nnshimbun-retrieve-headers-with-nov): Ditto.

2005-07-29  Kevin Rodgers  <kevin.rodgers@ihs.com>

	* w3m.el (w3m-content-type-alist): Add the text/sgml entry.

2005-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-scroll-up-1): New function.
	(w3m-lynx-like-map): Use it for the J command.
	(w3m-scroll-up-or-next-url): Use it.

2005-07-23  Tsuyoshi CHO  <tsuyoshi_cho@yahoo.co.jp>

	* shimbun/sb-zdnet-jp.el (shimbun-zdnet-jp-group-alist): Add new
	groups for blogs,columns and channel.

	* shimbun/sb-engadget-ja.el (shimbun-engadget-ja-content-end):
	Follow the change of the site.

	* shimbun/(sb-cnetnetworks.el,sb-cnet-jp.el,sb-zdnet-jp,
	sb-engadget-ja): Cosmetic refine.

2005-07-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
